pom settings changed